@@ -1,9 +1,9 @@
-#!/usr/bin/ruby
+# Encoding: utf-8
 #
 # Authors:: api.sgomes@gmail.com (Sérgio Gomes)
 #           api.dklimkin@gmail.com (Danial Klimkin)
 #
-# Copyright:: Copyright 2011, Google Inc. All Rights Reserved.
+# Copyright:: Copyright 2010, Google Inc. All Rights Reserved.
 #
 # License:: Licensed under the Apache License, Version 2.0 (the "License");
 #           you may not use this file except in compliance with the License.
