@@ -1,4 +1,4 @@
-#!/usr/bin/ruby
+# Encoding: utf-8
 #
 # Author:: api.dklimkin@gmail.com (Danial Klimkin)
 #
